# logical-path

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/agents/: copilot-instructions.md  docs.agent.md  speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/instructions/: markdown.instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/checklists/: requirements.md
.specify/specs/contracts/: public-api.md
docs/: FAQ.md  api-reference.md  architecture.md  examples.md  how-it-works.md  platform-behavior.md
docs/example-unix/: Cargo.toml  README.md
docs/example-unix/src/: main.rs
docs/example-windows/: Cargo.toml  README.md
docs/example-windows/src/: main.rs
specs/001-core-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-features/contracts/: public-api.md
specs/002-windows-full-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-windows-full-support/checklists/: requirements.md
specs/003-docs-examples/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/core-features/: plan.md  tasks.md
src/: lib.rs
tests/: integration.rs
(+2 files in other folders)
